---
title: Entity Relationship Diagram for E-commerce Platform Entities
---

erDiagram
    User ||--o{ Order : places
    User ||--o{ Review : writes
    User ||--o{ ShoppingCart : owns
    User ||--o{ Address : has
    User ||--o{ Session : has
    User ||--o{ PasswordResetToken : requests
    User ||--o{ SupportTicket : creates
    User ||--o{ AnalyticsEvent : triggers
    User ||--o{ AuditLog : generates
    User ||--o{ Notification : receives
    User ||--o{ RolePermission : assigned
    Order ||--|{ OrderItem : contains
    Order ||--|{ Payment : paid_by
    Order ||--|{ Shipment : ships
    Order ||--o{ ReturnRefund : may_have
    OrderItem ||--|| ProductVariant : references
    OrderItem ||--|| Product : references
    Product ||--o{ ProductImage : has
    Product ||--o{ ProductVariant : has
    Product ||--o{ Review : reviewed_by
    Product ||--o{ Category : belongs_to
    Product ||--o{ Brand : made_by
    Product ||--o{ Inventory : tracked_by
    Product ||--o{ Promotion : eligible_for
    ProductVariant ||--|| Inventory : tracks
    ProductVariant ||--|| Tax : taxed_by
    ProductVariant ||--|| Currency : priced_in
    ShoppingCart ||--o{ ShoppingCartItem : contains
    ShoppingCartItem ||--|| ProductVariant : references
    ShoppingCartItem ||--|| Product : references
    ShoppingCartItem ||--|| Promotion : eligible_for
    Payment ||--|| Currency : uses
    Payment ||--|| Tax : includes
    Payment ||--|| Promotion : applies
    Shipment ||--|| Address : ships_to
    Shipment ||--|| Order : for
    Shipment ||--|| User : delivered_to
    ReturnRefund ||--|| Payment : refunds
    ReturnRefund ||--|| Order : for
    Review ||--|| Product : about
    Review ||--|| User : by
    Review ||--|| Order : for
    Banner ||--|| Promotion : displays
    Banner ||--|| Product : features
    Banner ||--|| Category : features
    Banner ||--|| Brand : features
    Notification ||--|| User : for
    Notification ||--|| Order : about
    Notification ||--|| SupportTicket : about
    SupportTicket ||--|| User : created_by
    SupportTicket ||--|| Order : about
    SupportTicket ||--|| Product : about
    SupportTicket ||--|| Review : about
    RolePermission ||--|| User : assigned_to
    RolePermission ||--|| RolePermission : parent
    AuditLog ||--|| User : by
    AuditLog ||--|| Order : about
    AuditLog ||--|| Product : about
    AuditLog ||--|| SupportTicket : about
    AnalyticsEvent ||--|| User : by
    AnalyticsEvent ||--|| Product : about
    AnalyticsEvent ||--|| Order : about
    AnalyticsEvent ||--|| Review : about
    AnalyticsEvent ||--|| SupportTicket : about
    ContactSubmission ||--|| User : from
    ContactSubmission ||--|| SupportTicket : creates
    FAQ ||--|| Category : belongs_to
    Promotion ||--|| Product : applies_to
    Promotion ||--|| Category : applies_to
    Promotion ||--|| Brand : applies_to
    Promotion ||--|| Order : applies_to
    Inventory ||--|| Product : for
    Inventory ||--|| ProductVariant : for
    Inventory ||--|| OrderItem : for
    Tax ||--|| ProductVariant : applies_to
    Tax ||--|| Payment : included_in
    Currency ||--|| Payment : used_in
    Currency ||--|| ProductVariant : used_in
